little fix of viewport on mobile

--- a/frontend/src/styles/LandingPage.css
+++ b/frontend/src/styles/LandingPage.css
@@ -30,5 +30,7 @@
     left:  0%;
     right: 0%;
     bottom: 0%;
+
+    background-size: 50vw 50vw;
   }
 }
